Fix margins for center-aligned, embedded images

--- a/web/themes/custom/union_marketing/scss/components/_media.scss
+++ b/web/themes/custom/union_marketing/scss/components/_media.scss
@@ -28,6 +28,15 @@
   min-width: 50%;
 }
 
+.cu-media.align-center {
+  margin-bottom: var(--cu-vr1);
+
+  .cu-image,
+  audio {
+    width: 100%;
+  }
+}
+
 .cu-media.align-right,
 .cu-media.align-left {
   margin: 0 0 var(--cu-vr1) 0;
